--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<h1> This code is from East Us Repository<h1>
+<h1> This code is from Japan East region Repository<h1>
 </body>
 </html>
