--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-<h1> This code is from East US region Repository<h1>
+<h1> This code is from Central India region Repository<h1>
+<h1> Paratyush Nilesh Wagh <h1>
 </body>
 </html>
