--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1> This code is from Central India region Repository<h1>
-<h1> Paratyush Nilesh Wagh <h1>
+<h2> Pratyush Nilesh Wagh <h2>
 </body>
 </html>
